# aoc-solutions

./: .gitignore  .gitmodules  .luarc.json  .pre-commit-config.yaml  pyproject.toml
2022/: base.hexpattern  file_to_book.py  file_to_book_oneline.py  wisp_cad.hexpattern
2022/day1/: day1.hexpattern  day1.py
2022/day2/: day2.hexpattern  day2.py
2022/day3/: day3.hexpattern  day3.py  input.txt
2022/day4/: day4.hexpattern  day4.py
2022/day5/: day5.hexpattern  day5.py
2022/day6/: day6.hexpattern  day6.py
2024/src/day1/: main.clj
2024/src/day11/: main.clj
2024/src/day17/: main.clj
2024/src/day2/: main.clj  main.py
2024/src/day3/: main.clj  main.py
2024/src/day4/: main.clj
2024/src/day5/: main.clj
2024/src/day6/: main.clj
2024/src/day7/: main.clj
2025/: macros.hexpattern
2025/day1/: day1.lua  part1.hexpattern  part2.hexpattern
